# CGoL_gSoD

./: Makefile  gSoD.cpp  structures.hpp  unique_ensurer.hpp
lifelib/: .gitlab-ci.yml  _version.py  bitbounds.h  bitworld.h  classifier.h  compile_qufince.sh  qfp.py  spantree.h  upattern.h
lifelib/avxlife/: leaf_iterators.h
lifelib/avxlife/lifelogic/: iterators_b3s23.h
lifelib/cgold/: block0.cbc
lifelib/classic/: bpattern.h
lifelib/cpads/: .gitlab-ci.yml  CMakeLists.txt  LICENCE.txt  README.md  downstream.txt  hbuild.sh
lifelib/cpads/include/cpads/: bdd.hpp  bitswap.hpp  core.hpp  gpu_only.hpp  indextable.hpp  ivector.hpp  mu.hpp  mxor.hpp  vec.hpp
lifelib/cpads/include/cpads/algebra/: ff64.hpp
lifelib/cpads/include/cpads/internal/: assop.inc  binop.inc  loop.inc  mu6.inc  vec_impl.hpp
lifelib/cpads/include/cpads/random/: epoch0.h  gaussian.hpp  prng.hpp
lifelib/cpads/include/cpads/sorting/: bitonic.hpp
lifelib/cpads/test/: CMakeLists.txt  CMakeLists.txt.in
lifelib/cpads/test/cpu/: CMakeLists.txt  fibmix.cpp
lifelib/cpads/test/cpu/unit/: test_at47.cpp  test_bdd.cpp  test_bitswap.cpp  test_core.cpp  test_ff64.cpp  test_ivector.cpp  test_mxor.cpp  test_vec.cpp  test_zalloc.cpp
lifelib/cpads/test/gpu/: CMakeLists.txt  test_gaussian_cdf.cu  test_gaussian_tail.cu
lifelib/cpads/test/gpu/unit/: test_bitonic.cu  test_gaussian_moments.cu  test_popcount.cu
lifelib/cuda2/: basics.h  cudagol.h  cusha256.h  emt.h  qfkernel.inc  qftest.rle  qufince.h  qufince_kernel.cu  qufince_main.cpp
lifelib/soup/: hashsoup.h
